# RS020-proj3ctf1lter

./: .gitignore  CMakeLists.txt  README.md  caffe_notes  train_mean.binaryproto
project_filter_gui/: imageprocessor.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_filter_gui.pro
project_filter_gui/src/: net.cpp  net.hpp
project_filter_gui/src/prototxt_files/: compress_deploy_output_image.prototxt  compress_solver.prototxt
src/: compression.cpp  images_to_lmdb.sh  main.cpp  net.cpp
src/prototxt_files/: compress_deploy.prototxt  compress_deploy_output_image.prototxt  compress_net.prototxt  compress_solver.prototxt  compress_solver.prototxt~  decompress_deploy.prototxt  train_and_test.sh
src/prototxt_files/project_filter_gui/: imageprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
trained_models/: caffemodel_100000_iter  compress_net_iter_65000.caffemodel  compress_net_iter_65000.solverstate  solverstate_100000_iter
